# youtube-transcription-mcp

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.snippet.yml  openclaw.json.example  pyproject.toml
.github/workflows/: publish.yml
authgate/: Dockerfile  README.md  pyproject.toml  supervisor.sh
authgate/src/authgate/: __init__.py  app.py  browser.py  config.py  cookies.py  sessions.py
authgate/tests/: test_app.py  test_cookies.py  test_sessions.py
docker/: entrypoint.sh
docs/: decisions.md  deploy.md  po-token-sidecar.md  roadmap.md
src/transcription_engine/: __init__.py  audit.py  chunking.py  clean.py  cli.py  diarization.py  media.py  models.py  pipeline.py  plan.py  providers.py  quality.py  repair.py  status.py  storage.py  subtitles.py  youtube.py
src/transcription_mcp/: __init__.py  authgate_client.py  bundle.py  circuit_breaker.py  config.py  jobs.py  managed_cookies.py  pipeline.py  retry_policy.py  server.py  tools.py  transcription_plan.py  worker.py  youtube_login.py  youtube_subtitles.py
src/transcription_v4/: __init__.py  audit.py  chunking.py  clean.py  cli.py  diarization.py  media.py  pipeline.py  plan.py  providers.py  quality.py  repair.py  status.py  storage.py  subtitles.py  text.py  youtube.py
tests/: test_agent_perception.py  test_audit_batch1.py  test_cache_priority.py  test_circuit_breaker.py  test_groq_provider.py  test_job_recovery.py  test_jobs.py  test_login_hint_coverage.py  test_pipeline_features.py  test_provider_narrative.py  test_provider_policy.py  test_retry_policy.py  test_smoke.py  test_subtitles_run.py  test_transcription_plan.py  test_watch.py  test_youtube_auth.py
