[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "youtube-transcription-mcp"
version = "0.1.0"
description = "MCP server that transcribes YouTube videos via a Groq → ElevenLabs → captions fallback chain."
requires-python = ">=3.11"
readme = "README.md"
authors = [{ name = "Octavio Criollo" }]
dependencies = [
    "mcp>=1.12.4",
    "httpx>=0.27",
    "yt-dlp>=2024.8",
    "pydantic>=2.0",
    "youtube-transcript-api>=0.6,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
youtube-transcription-mcp = "transcription_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["transcription_mcp*", "transcription_v4*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
