[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "youtube-transcription-mcp"
version = "0.4.4"
description = "MCP server that transcribes YouTube videos via a Groq → ElevenLabs → captions fallback chain."
requires-python = ">=3.11"
readme = "README.md"
authors = [{ name = "Octavio Criollo" }]
license = { text = "MIT" }
# Floors raised to the 2026-era versions we actually run/test (verified 2026-06-04).
# Still ">=" (not pinned) so newer is allowed; this just stops a clean install from
# resolving to an ancient, untested version. Exact reproducibility is the lockfile's job.
dependencies = [
    "mcp>=1.27.2",
    "httpx>=0.28.1",
    "yt-dlp>=2026.3.17",
    "pydantic>=2.13.4",
    "youtube-transcript-api>=1.2.4,<2",
    # Imported directly by server.py (the /health route uses starlette Request /
    # JSONResponse). It also arrives transitively via `mcp`, but is declared here
    # so the contract does not depend on a transitive dependency staying present.
    "starlette>=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15",
]
# Local (offline) transcription provider, opt-in: `pip install -e .[local]`.
# Heavy and platform-specific, so it is NOT in the base dependencies.
# `torch` is intentionally not pinned here: the correct wheel depends on the
# platform / CUDA build, so install it per-platform (CPU or GPU) alongside this.
local = [
    "faster-whisper>=1.2",
]

[project.scripts]
youtube-transcription-mcp = "transcription_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["transcription_mcp*", "transcription_engine*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
